--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,4 @@ set(CMAKE_CXX_COMPILER mpicxx)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(peural main.cpp Neuron.cpp Neuron.h NeuralLayer.cpp NeuralLayer.h NeuralNetwork.cpp NeuralNetwork.h)
+add_executable(peural main.cpp Neuron.cpp Neuron.h NeuralLayer.cpp NeuralLayer.h NeuralNetwork.cpp NeuralNetwork.h Activation.cpp Activation.h)
